k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
    - http: 
        paths:
         - path: /  
           pathType: Prefix
           backend:
            service:
             name: webapp
             port:
              number: 80
